# mcp-multi-tool-agent

./: CHECKLIST.md  DELIVERY_COMPLETE.md  EXAMPLES.md  FINAL_SUMMARY.md  GITHUB_PUSH.md  INDEX.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  SETUP_INSTRUCTIONS.md  START_HERE.md  claude_desktop_config.json  quick_start.bat  quick_start.sh  requirements.txt  test_mcp_tools.py
mcp-multi-tool-agent/: .env.example  .gitignore  CHECKLIST.md  DELIVERY_COMPLETE.md  EXAMPLES.md  FINAL_SUMMARY.md  GITHUB_PUSH.md  INDEX.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  SETUP_INSTRUCTIONS.md  START_HERE.md  claude_desktop_config.json  pyproject.toml  quick_start.bat  test_mcp_tools.py
mcp-multi-tool-agent/src/: agent.py
mcp-multi-tool-agent/src/mcpserver/: currency.py  news.py
src/mcpserver/: __init__.py  currency.py  news.py
